# inrush

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust.yml
src/: crd.rs  main.rs
templates/: nginx.txt
