[package]
name = "inrush"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.93.1", features = ["runtime", "derive", "ws", "unstable-runtime"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
futures = "0.3.30"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features=["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.61"
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
tokio-util = "0.7.11"
askama = "0.12.1"
schemars = "*"
serde_yaml = "0.9.34"
resolv-conf = "0.7.0"
