[package]
name = "inrush"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.92.1", features = ["runtime", "derive", "ws", "unstable-runtime"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
futures = "0.3.31"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features=["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "1.0.69"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
tokio-util = "0.7.13"
askama = "0.12.1"
schemars = "*"
serde_yaml = "0.9.34"
resolv-conf = "0.7.0"
