[package]
name = "inrush"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive", "ws", "unstable-runtime"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
futures = "0.3.31"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features=["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
tokio-util = "0.7.13"
askama = "0.12.1"
schemars = "*"
serde_yaml = "0.9.34"
resolv-conf = "0.7.4"
